# AdventurersLife

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Engine/: CMakeLists.txt
Engine/AnimatedSprite/: AnimatedSprite.cpp  AnimatedSprite.hpp
Engine/CollisionComponent/: CollisionComponent.cpp  CollisionComponent.hpp
Engine/CollisionComponentOld/: CollisionComponent.cpp  CollisionComponent.hpp
Engine/CollisionShape/: CollisionShape.cpp  CollisionShape.hpp
Engine/CollisionShapeComponentOld/: CollisionShapeComponent.cpp  CollisionShapeComponent.hpp
Engine/DrawLayers/: DrawLayers.cpp  DrawLayers.hpp
Engine/Entity/: Entity.cpp  Entity.hpp
Engine/GUI/: Button.cpp  Button.hpp  Label.cpp  Label.hpp
Engine/Game/: Game.cpp  Game.hpp
Engine/GameObj/: GameObj.hpp
Engine/JsonBridge/: JsonBridge.cpp  JsonBridge.hpp
Engine/Math/: Math.cpp  Math.hpp
Engine/PhysicsManager/: PhysicsManager.cpp  PhysicsManager.hpp
Engine/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
Engine/Scene/: Scene.cpp  Scene.hpp
Engine/Tile/: Tile.cpp  Tile.hpp
Engine/TileMap/: TileMap.cpp  TileMap.hpp  TileMapLayer.cpp  TileMapLayer.hpp  TileMapOld.cpp  TileMapOld.hpp
Engine/Updatable/: Updatable.cpp  Updatable.hpp
Engine/WorldEntity/: WorldEntity.cpp  WorldEntity.hpp
include/: pch.h
include/AnimatedSprite/: AnimatedSprite.cpp  AnimatedSprite.hpp
include/Contexts/: Context.cpp  Context.hpp  GameContext.cpp  GameContext.hpp  MenuContext.cpp  MenuContext.hpp
include/DrawLayers/: DrawLayers.cpp  DrawLayers.hpp
include/Drawable/: Drawable.hpp
include/GUI/: Button.cpp  Button.hpp  GUI.hpp  Label.cpp  Label.hpp
include/Game/: Game.cpp  Game.hpp
include/JsonBridge/: JsonBridge.cpp  JsonBridge.hpp
include/Level/: Level.hpp
include/States/: GameState.cpp  GameState.hpp  State.cpp  State.hpp
include/TileMap/: TileMap.cpp  TileMap.hpp
include/Updatable/: Updatable.cpp  Updatable.hpp
resources/Actor/Characters/Shrek/: Shrek.aseprite
resources/Tilesets/: TerrainTileSet.tsx  TilesetFloor.tsx
src/: CMakeLists.txt  main.cpp  settings.json
src/Player/: Player.cpp  Player.hpp
src/PlayerLabyrinth/: Player.cpp  Player.hpp
src/Scene/: GameScene.cpp  GameScene.hpp  LabyrinthScene.cpp  LabyrinthScene.hpp  MenuScene.cpp  MenuScene.hpp
worlds/: shrek.json  world.json  world.lua  world.tmx  world_b.json  world_test.ldtk
